# git-tea

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: gossip-on-merge.yml
src/: render.py
src/git_tea/: cli.py  git_reader.py  signals.py  tones.py
src/git_tea.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/git_tea/tonepacks/: wholesome.yml
src/tonepacks/: petty.yml  tabloid.yml
